--- a/EmoBuzz/war/WEB-INF/web.xml
+++ b/EmoBuzz/war/WEB-INF/web.xml
@@ -66,6 +66,6 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</filter-mapping>
 	
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>Home.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
